--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,33 +7,33 @@
     <title>Instagram</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%= stylesheet_pack_tag 'application'%>
+    <%= stylesheet_pack_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
   </head>
 
-  <body data-flash-messages="<%=JSON.dump(flash.to_a)%>">
+  <body data-flash-messages="<%= JSON.dump(flash.to_a) %>">
     <header>
       <div class="container">
         <nav>
           <div class="logo-icon">
-            <%= link_to embedded_svg("instagram-icon.svg"), root_path%>
+            <%= link_to embedded_svg("instagram-icon.svg"), root_path %>
           </div>
 
           <div class="logo-text">
-            <%= link_to root_path do %>     
+            <%= link_to root_path do %>
               <%= image_tag "instagram.png" %>
             <% end %>
-          </div>  
-        </nav> 
+          </div>
+        </nav>
 
         <nav class="actions">
           <%= link_to embedded_svg("plus.svg"), new_post_path %>
-          <%= link_to embedded_svg("user.svg"), "#" %>
+          <%= link_to embedded_svg("user.svg"), "#", data: { modal_id: "user-actions" } %>
         </nav>
+      </div>
     </header>
 
     <%= yield %>
+    <%= render "layouts/user_actions_modal" %>
   </body>
 </html>
- 
